Git Commit test

--- a/gameworkingYZ/gameworkingYZ/gameworkingYZ.vcxproj
+++ b/gameworkingYZ/gameworkingYZ/gameworkingYZ.vcxproj
@@ -19,12 +19,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Framework\game.c" />
+    <ClCompile Include="Framework\Renderer.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="stdafx.c">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Framework\game.h" />
+    <ClInclude Include="Framework\Renderer.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
